style.css
/* ... */
.go-back-btn-l i {
    font-size: 20px;
    color: #0077B5;
    cursor: pointer;
}

.go-back-btn-l:hover {
    transform: scale(1.1);
}

/* styles for gitvisit */

.gitcontentarea {
    font-family: 'Nunito sans';
    background-color: white;
    width: 30%;
    height: 85vh;
    border-radius: 30px;
    color: #2b3137;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border: 5px solid #2dba4e;
    position: relative;
}

.gitimg {
    background-color:#fafbfc;
    border: 4px solid #2dba4e;
    height: 100px;
    width: 100px;
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.gitimg img {
    width: 70%;
    height: auto;
}

.git-heading {
    margin-top: 50px;
}

.profile-info {
    margin-top: 50px;
    text-align: center;
}

.profile-info h5 {
    font-size: 18px;
}

.profile-info h4 {
    margin-top: 40px;
    font-size: 20px;
}

.profile-info p{
    margin-top: 15px;
}

.git-btn {
    display: inline-block;
    margin-top: 30px;
}

.go-back-btn-git {
    background-color: #fafbfc;
    width: 50px;
    height: 50px;
    border-radius: 50%;
    position: absolute;
    top: 10px;
    left: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    border: 4px solid #2dba4e;
    cursor: pointer;
    transition: all 0.2s ease;
}

.go-back-btn-git button {
    background: transparent;
    border: none;
    cursor: pointer;
}

.go-back-btn-git i {
    font-size: 20px;
    color: #2dba4e;
    cursor: pointer;
}

.go-back-btn-git:hover {
    transform: scale(1.1);
}

/* styles for making the visit pages slide away and to the webpage */

.contentarea {
    position: absolute;
    top: 90px;
    right: 20px;
    transform: translateX(300%);
    transition: .5s ease;
}

.contentarea.active {
    transform: translateX(0);
}

/* styles for mobie phones */
@media (max-width: 768px) {
    body {
        overflow-y: scroll;
        width: 100vw;
        overflow-x: hidden;
    }
    
    .navbar {
        width: 100vw;
        left: 0;
        justify-content: space-between;
    }

    .navbar .logo {
        font-size: 1.5rem;
        margin-left: 30px;
    }

    .contactIcons {
        position: absolute;
        top: 100px;
        width: 100%;
        display: flex;
        justify-content: space-evenly;
    }

    .contactIcons i{
        background-color: #101D42;
        padding: 10px;
        border-radius: 10px;
        border: 2px solid white;
    }

    .navbar .codeLink {
        margin-right: 10px;
    }

    form {
        width: 100%;
    }

    .inputArea {
        gap: 20px;
        margin-top: 150px;
        width: 90%;
        height: 150px;
    }

    .inputArea input {
        width: 65%;
        float: left;
        margin-left: 10px;
    }

    .inputArea input::placeholder {
        font-size: 16px;
    }

    .inputArea button {
        width: 25%;
        float: right;
        margin-right: 10px;
    }

    .addedTasks {
        width: 90%;
    }

    .contentarea {
        position: fixed;
        top: 145px;
        right: 15px;
        height: 75%;
        width: 80%;
    }

    .gcontentarea {
        width: 80%;
    }

    .lcontentarea {
        padding: 5px;
    }

    .gitcontentarea {
        padding: 5px;
    }

    .menu-item::after{
        display: none;
    }

    .linkedin-heading {
        margin-top: 10px;
    }

    .profile-info {
        margin-top: 20px;
    }

    .profile-info h5{
        margin-top: 10px;
    }

}

